# udp_ros_communication

./: CMakeLists.txt  README.md  package.xml
client_dir/: CMakeLists.txt
client_dir/src/: client_node.cpp
src/: server_node.cpp
